--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,9 +2,9 @@ cmake_minimum_required(VERSION 3.8)
 project(test-any-set)
 
 set(CMAKE_CXX_STANDARD 17)
-include_directories("./../")
+include_directories("./../include")
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0 -Wall -Wextra")
 add_executable(test-any-set
 	tests/test-main.cpp
 	tests/bucket_size.cpp
