Added/fixed tests, fixed behavior of AnySet

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -5,5 +5,13 @@ find_package(Doxygen)
 
 if(DOXYGEN_FOUND)
 	set(DOXYGEN_LAYOUT_FILE "DoxygenLayout.xml")
-	doxygen_add_docs(docs ./../include/SetOperations.h ./../include/extra-hash.h ./../include/AnyHash.h ./../include/AnySet.h ./../include/AnyNode.h)
+	doxygen_add_docs(
+		docs
+		./../include/SetOperations.h
+		./../include/extra-hash.h
+		./../include/AnyHash.h
+		./../include/AnySet.h
+		./../include/AnyNode.h
+		./../CompressedPair.h 
+	)
 endif(DOXYGEN_FOUND)
