--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,10 +2,10 @@ cmake_minimum_required(VERSION 3.8)
 project(test-any-set)
 
 set(CMAKE_CXX_STANDARD 17)
-include_directories("./../include")
+include_directories("./../include/")
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0 -Wall -Wextra")
-add_executable(test-any-set
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Og -Wall -Wextra")
+add_executable(test-anyset
 	tests/test-main.cpp
 	tests/assign.cpp
 	tests/bucket_size.cpp
