--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(any-set-docs)
-
+project("AnySet Documentation")
 find_package(Doxygen)
 
 if(DOXYGEN_FOUND)
