Updated documentation and tutorials.  Added cppreference tagfile for doxygen.

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(Doxygen)
 if(DOXYGEN_FOUND)
 	set(DOXYGEN_LAYOUT_FILE "DoxygenLayout.xml")
 	set(DOXYGEN_EXAMPLE_PATH "examples/")
+	set(DOXYGEN_TAGFILES "${DOXYGEN_TAGFILES} ./cppreference.tagfile/cppreference-doxygen-web.tag.xml=http://en.cppreference.com/w/")
 	doxygen_add_docs(
 		docs
 		./../include/anyset/SetOperations.h
